# fortran-mcp

./: .gitignore  LICENSE  README.md  design_patterns.md  implementation_plan.md  pyproject.toml  session_handoff.md
.github/workflows/: ci.yml  release.yml
docs/: FEATURE_IDEAS.md
src/fortran_mcp/: __init__.py  linter.py  server.py
test/: README.md  illustrate_mcp_tools.py  interop_test_mod.f90  lmdif.f  modern_compliant.f90  modern_lmdif.f90  run_benchmarks.py  test_interop_run.py  unformatted_legacy.f90
